kubernetes/apps/k8s/media/immich/app/proxy/ingress.yaml
apiVersion: networking.${ENVIRONMENT}.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: "immich.nucstack.com"
    http:
      paths:
      - backend:
          service:
            name: immich-proxy
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "immich.nucstack.com"
